add node version to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "dad-jokes",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.11.3",
+    "node": "10.15.3"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "eslint-utils": "^1.4.3",
